# murshop24-models

./: .flake8  pyproject.toml
murshop24_models/: __init__.py  enums.py
