[tool.poetry]
name = "murshop24-models"
version = "0.1.0"
description = ""
authors = ["klim-neumann <klim.neumann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.23" }

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
black = "^23.11.0"
isort = "^5.12.0"
editorconfig-checker = "^2.7.3"
pre-commit = "^3.5.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
